Making more changes to CSS of Portfolio

--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ permalink: /:categories/:title
 links:
   - title: about
     url: /about
-  - title: work
-    url: /work
+  - title: projects
+    url: /projects
   - title: articles
     url: /articles
 
