--- a/_config.yml
+++ b/_config.yml
@@ -30,40 +30,4 @@ markdown: kramdown
 
 gems:
   - octopress-autoprefixer
-  
-gems: [jekyll/responsive_image]
-
-responsive_image:
-  # [Required]
-  # Path to the image template.
-  template: _includes/responsive-image.html
-
-  # [Optional, Default: 85]
-  # Quality to use when resizing images.
-  default_quality: 90
-
-  # [Optional, Default: []]
-  # An array of resize configuration objects. Each object must contain at least
-  # a `width` value.
-  sizes:
-    - width: 350
-      quality: 80
-    - width: 480  # [Required] How wide the resized image will be.
-      quality: 80 # [Optional] Overrides default_quality for this size.
-    - width: 800
-      quality: 90
-    - width: 1400
-      quality: 90
-
-  # [Optional, Default: assets/resized/%{filename}-%{width}x%{height}.%{extension}]
-  # The template used when generating filenames for resized images. Must be a
-  # relative path.
-  #
-  # Parameters available are:
-  #   %{basename}    Basename of the file (assets/some-file.jpg => some-file.jpg)
-  #   %{filename}    Basename without the extension (assets/some-file.jpg => some-file)
-  #   %{extension}   Extension of the file (assets/some-file.jpg => jpg)
-  #   %{width}       Width of the resized image
-  #   %{height}      Height of the resized image
-  #
-  output_path_format: img/resized/%{width}/%{filename}-%{width}x%{height}.%{extension}
+  - jekyll-srcset
