--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: robinfoxin@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Aspiring web designer and developer, specialising in HTML, CSS and Javascript.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://example.com" # the base hostname & protocol for your site
+url: "http://mrkitsune.com" # the base hostname & protocol for your site
 twitter_username: smugfox
 github_username:  smugfox
 
@@ -22,8 +22,6 @@ links:
     url: /about
   - title: projects
     url: /projects
-  - title: articles
-    url: /articles
 
 # Build settings
 markdown: kramdown
