--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Robin Fox Portfolio
 email: robinfoxin@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Aspiring web designer and developer, specialising in HTML, CSS and Javascript.
+  Aspiring web designer and developer, specialising web and mobile design.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://mrkitsune.com" # the base hostname & protocol for your site
 twitter_username: smugfox
